2002-06-14  14:31 PST  Eric Sandall <sandalle@yahoo.com>

  * Added MD5 entry to DETAILS

2002-05-29  10:28 PST  Eric Sandall <sandalle@yahoo.com>

  * Tested and works with gcc3

2002-05-04  03:29 PST  Eric Sandall <sandalle@yahoo.com>

  * Modified SOURCE_URLs to use telia.dl and unc.dl for SourceForge

2002-03-20  Jean-Michel Smith <jean@kcco.com>

   * added LICENSE[0] (GPL) and LICENSE[1] (LGPL) entries; package is
     dual licensed under both
   * updated Version to 1.27 per Marc Greene's <eru@subdimension.com>
     notification
