@@ -1,1 +1,2 @@
+depends  init.d  &&
 depends  gawk
