@@ -1,3 +1,8 @@
+2002-08-21  22:13 PST  Eric Sandall <eric@sandall.us>
+
+  * Fixed Bug #392 (mount.sh)
+  * Added a dependency for init.d to provide /etc/init.d/functions
+
 2002-06-14  14:31 PST  Eric Sandall <sandalle@yahoo.com>
 
   * Added MD5 entry to DETAILS
